--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "vue": "^3.5.13"
+    "bootstrap-icons": "^1.13.1",
+    "router": "^2.2.0",
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
