--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
     "router": "^2.2.0",
+    "sass": "^1.93.2",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
